--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
             justify-content: center;
             align-items: center;
         }
+
+        @media only screen and (max-width: 769px) {
+            body {
+                background-color: lightblue;
+            }
+            h1 {
+                font-size: 5em;
+            }
+            h2 {
+                font-size: 3em;
+            }
+        }
     </style>
 </head>
 <body>
