--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="section">
                 <h3>Lorem Ipsum</h3>
                 <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pn-W0DVQw8Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://youtube.com/shorts/oUPQyBf2jYM?feature=share" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
 
