--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="divider"></div>
         <div class="section-container">
             <div class="section">
-                <h3>Lorem Ipsum</h3>
+                <h3>Crise de 1929</h3>
                 <div class="video">
                     <iframe width="560" height="315" src="https://youtube.com/shorts/oUPQyBf2jYM?feature=share" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
