fix grande depre video and add civil rights video

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
         <div class="divider"></div>
         <div class="section-container">
             <div class="section">
-                <h3>Crise de 1929</h3>
+                <h3>Crise de 1929 - Grande Depressão</h3>
                 <div class="video">
-                    <iframe width="560" height="315" src="19f032be-284e-4269-aa9d-53f2e9ab7356.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe src="https://drive.google.com/file/d/10W7-8jpdcqAflulJZUKjbv-3WT1h3xxh/preview" width="640" height="480" allow="autoplay"></iframe>
                 </div>
             </div>
 
             <div class="section">
-                <h3>Lorem Ipsum</h3>
+                <h3>Direitos Civis e Liberdade Sexual</h3>
                 <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pn-W0DVQw8Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe src="https://drive.google.com/file/d/1SEkajT0cNxI3bYqqCv8FH2ekPFZQigU_/preview" width="640" height="480" allow="autoplay"></iframe>
                 </div>
             </div>
 
