--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <div class="section">
                 <h3>Crise de 1929 - Grande Depressão</h3>
                 <div class="video">
+                    <img style="width: 80%;height:80%" src="IMG_8338.jpeg" />
                     <iframe src="https://drive.google.com/file/d/10W7-8jpdcqAflulJZUKjbv-3WT1h3xxh/preview" width="640" height="480" allow="autoplay"></iframe>
                 </div>
             </div>
