Update index.html zindex

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
         <div class="section-container">
             <div class="section">
                 <h3>Crise de 1929 - Grande Depressão</h3>
-                <div class="video">
-                    <img style="width: 80%;height:80%" src="IMG_8338.jpeg" />
-                    <iframe src="https://drive.google.com/file/d/10W7-8jpdcqAflulJZUKjbv-3WT1h3xxh/preview" width="640" height="480" allow="autoplay"></iframe>
+                <div class="video" style="/*! position: absolute; */">
+                    <img style="width: 6%;height:20%;z-index: 10;position: absolute;" src="IMG_8338.jpeg">
+                    <iframe src="https://drive.google.com/file/d/10W7-8jpdcqAflulJZUKjbv-3WT1h3xxh/preview" allow="autoplay" style="z-index: 1;position: relative;" width="640" height="480"></iframe>
                 </div>
+
             </div>
 
             <div class="section">
