--- a/video.html
+++ b/video.html
@@ -54,8 +54,9 @@
     </style>
 </head>
 <body>
-    <div class="video">
-        <iframe src="https://drive.google.com/file/d/17eJ2uZtdGSpVjRKaq9sHdQF4NqeOk1oi/preview" width="640" height="480" allow="autoplay"></iframe>
-    </div>
+    <div class="video" style="/*! position: absolute; */">
+                    <img style="width: 6%;height:20%;z-index: 10;position: absolute;" src="WhatsApp Image 2023-05-13 at 15.23.47.jpeg">
+                    <iframe src="https://drive.google.com/file/d/17eJ2uZtdGSpVjRKaq9sHdQF4NqeOk1oi/preview" allow="autoplay" style="z-index: 1;position: relative;" width="640" height="480"></iframe>
+                </div>
 </body>
 </html>
