--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
         <div class="section-container">
             <div class="section">
                 <h3>Crise de 1929 - Grande Depressão</h3>
-                <div class="video" style="/*! position: absolute; */">
-                    <img style="width: 6%;height:20%;z-index: 10;position: absolute;" src="IMG_8338.jpeg">
-                    <iframe src="https://drive.google.com/file/d/10W7-8jpdcqAflulJZUKjbv-3WT1h3xxh/preview" allow="autoplay" style="z-index: 1;position: relative;" width="640" height="480"></iframe>
+                <div class="video">
+                    <iframe src="https://drive.google.com/file/d/10W7-8jpdcqAflulJZUKjbv-3WT1h3xxh/preview" allow="autoplay" width="640" height="480"></iframe>
                 </div>
 
             </div>
